--- a/src/app/products/plan-rcv/plan-rcv-detail/plan-rcv-detail.component.html
+++ b/src/app/products/plan-rcv/plan-rcv-detail/plan-rcv-detail.component.html
@@ -129,7 +129,7 @@
                 </div>
                 <div class="card-body">
                     <div class="container">
-                        <ag-grid-angular style="width: 100%; height: 400px;" class="ag-theme-alpine" [rowData]="ratesList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single">
+                        <ag-grid-angular style="width: 100%; height: 400px;" class="ag-theme-alpine" [rowData]="ratesList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single" (rowClicked)="ratesRowClicked($event)" (gridReady)="onRatesGridReady($event)">
                             <ag-grid-column headerName="Clase" field="xclase" [width]="220" [sortable]="true"></ag-grid-column>
                             <ag-grid-column headerName="Tipo" field="xtipo" [width]="230" [sortable]="true"></ag-grid-column>
                             <ag-grid-column headerName="Grupo" field="xgrupo" [width]="190" [sortable]="true"></ag-grid-column>
