Insert dañosmateriales->xmaterial || Falta retrieve

--- a/src/app/pop-up/notification-material-damage/notification-material-damage.component.html
+++ b/src/app/pop-up/notification-material-damage/notification-material-damage.component.html
@@ -43,6 +43,15 @@
                             </div>
                             <div class="col-sm-12 col-md-4">
                                 <div class="form-group">
+                                    <label>{{ "EVENTS.NOTIFICATIONS.MATERIAL" | translate }}</label>
+                                    <input type="text" formControlName="xmaterial" class="form-control" [ngClass]="{ 'is-invalid' : submitted && popup_form.get('xmaterial').errors }">
+                                    <div *ngIf="submitted && popup_form.get('xmaterial').errors"  class="invalid-feedback">
+                                        <div *ngIf="popup_form.get('xmaterial').errors.required">{{ "EVENTS.NOTIFICATIONS.DAMAGEDMATERIAL" | translate }}</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-md-4">
+                                <div class="form-group">
                                     <label>{{ "EVENTS.NOTIFICATIONS.DAMAGELEVEL" | translate }}</label>
                                     <select formControlName="cniveldano" class="form-control" [ngClass]="{ 'is-invalid' : submitted && popup_form.get('cniveldano').errors }">
                                         <option></option>
