--- a/src/app/pop-up/notification-material-damage/notification-material-damage.component.html
+++ b/src/app/pop-up/notification-material-damage/notification-material-damage.component.html
@@ -32,7 +32,7 @@
                             <div class="col-sm-12 col-md-4">
                                 <div class="form-group">
                                     <label>{{ "EVENTS.NOTIFICATIONS.MATERIALDAMAGE" | translate }}</label>
-                                    <select formControlName="cdanomaterial" class="form-control" [ngClass]="{ 'is-invalid' : submitted && popup_form.get('cdanomaterial').errors }" (change)="setIdMaterialDamage()">
+                                    <select formControlName="cdanomaterial" class="form-control" [ngClass]="{ 'is-invalid' : submitted && popup_form.get('cdanomaterial').errors }" (change)="setCMaterialDamage()">
                                         <option></option>
                                         <option *ngFor="let materialDamage of materialDamageList" value="{{ materialDamage.id }}">{{ materialDamage.value }}</option>
                                     </select>
@@ -41,7 +41,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-12 col-md-4" *ngIf="idMaterialDamage == 5">
+                            <div class="col-sm-12 col-md-4" *ngIf="cMaterialDamage == 5">
                                 <div class="form-group">
                                     <label>Material</label>
                                     <input type="text" formControlName="xmaterial" class="form-control" [ngClass]="{ 'is-invalid' : submitted && popup_form.get('xmaterial').errors }">
