--- a/src/app/pop-up/notification-quote-request-index/notification-quote-request-index.component.html
+++ b/src/app/pop-up/notification-quote-request-index/notification-quote-request-index.component.html
@@ -59,7 +59,7 @@
                             <ag-grid-column headerName="Cotización" field="ccotizacion" [width]="259" [sortable]="true"></ag-grid-column>
                             <ag-grid-column headerName="Observación" field="xobservacion" [width]="259" [sortable]="true"></ag-grid-column>
                             <ag-grid-column headerName="Fecha Creación" field="fcreacion" [width]="259" [sortable]="true"></ag-grid-column>
-                            <ag-grid-column headerName="Negocio Cerrado" field="xcerrada" [width]="259" [sortable]="false"></ag-grid-column>
+                            <ag-grid-column headerName="Negocio Cerrado" field="xcerrada" [width]="259" [sortable]="true"></ag-grid-column>
                         </ag-grid-angular>
                     </div>
                 </div>
