--- a/src/app/pop-up/notification-quote-request-detail/notification-quote-request-detail.component.html
+++ b/src/app/pop-up/notification-quote-request-detail/notification-quote-request-detail.component.html
@@ -57,7 +57,7 @@
                             </div>
                             <div class="col-sm-12 col-md-4">
                                 <div class="form-group form-check">
-                                    <input type="hidden" formControlName="bcerrada" class="form-check-input" [ngClass]="{ 'is-invalid' : submitted && popup_form.get('bcerrada').errors }" value="true">
+                                    <!-- <input type="hidden" formControlName="bcerrada" class="form-check-input" [ngClass]="{ 'is-invalid' : submitted && popup_form.get('bcerrada').errors }" value="true"> -->
                                     <!-- <label>{{ "PROVIDERS.QUOTEREQUESTS.CLOSED" | translate }}</label> -->
                                     <!-- <div *ngIf="submitted && popup_form.get('bcerrada').errors"  class="invalid-feedback">
                                         <div *ngIf="popup_form.get('bcerrada').errors.required">{{ "EVENTS.NOTIFICATIONS.REQUIREDVEHICLEDAMAGE" | translate }}</div>
