--- a/src/app/pop-up/notification-service-order/notification-service-order.component.html
+++ b/src/app/pop-up/notification-service-order/notification-service-order.component.html
@@ -212,7 +212,7 @@
                     </div>        
                     <br>
                     <br>
-                    <div class="row">
+                    <div class="row" *ngIf="grua">
                         <div class="col-sm-12 col-md-4">
                         <div class="form-group" style="margin-left: 15px;">
                             <label>{{ "EVENTS.SERVICEORDER.SINCE" | translate }}</label>
