--- a/src/app/financing/financing.component.html
+++ b/src/app/financing/financing.component.html
@@ -1,1 +1,195 @@
-<p>financing works!</p>
+<header id="header" class="d-flex align-items-center" style="margin-bottom: -30px;">
+    <div class="container-fluid container-xl d-flex align-items-center justify-content-between" style="margin-left: -10px;">
+        <a href="home" class="image d-flex align-items-center">
+          <img class="logocompany"/>
+        </a>
+        <a class="nav-item" href="inicio" (click)="logOut()" style="margin-bottom: 59px;">Salir</a>
+    </div>
+
+</header>
+<div class="ml-5" style="width: 92%;">
+    <div class="row mt-5" *ngIf="alert.show">
+        <div class="col-sm-12 col-md-6 mx-auto">
+            <ngb-alert *ngIf="alert.show" [type]="alert.type" (close)="alert.show = false;">{{ alert.message | translate }}</ngb-alert>
+        </div>
+    </div>
+
+    <div class="row mt-3">
+        <div class="col-sm-12">
+            <div class="card">
+                <div class="card-header company-card-header">
+                    <div class="row">
+
+                    </div>
+                </div>
+                <div class="card-body">
+                    <form [formGroup]="financing_form">
+                        <div class="row">
+                            <div class="col-lg-3">
+                                <div class="form-outline">
+                                    <label class="form-label" for="form3Examplev5">Propietarios</label>
+                                    <div >
+                                    <ng-autocomplete  [data]="propietaryList" [searchKeyword]="keyword" 
+                                                    placeholder="Seleccionar Propietario" (selected)='getSearchVehicle($event)'
+                                                    [itemTemplate]="itemTemplate" [notFoundTemplate]="notFoundTemplate">                                 
+                                    </ng-autocomplete>
+                                
+                                    <ng-template #itemTemplate let-item >
+                                        <a [innerHTML]="item.value"></a>
+                                    </ng-template>
+                                
+                                    <ng-template #notFoundTemplate let-notFound  >
+                                        <div [innerHTML]="notFound"></div>
+                                    </ng-template>
+                                  </div>
+                                </div>
+                            </div> 
+                            <div class="col-lg-3">
+                                <div class="form-outline">
+                                    <label class="form-label" for="form3Examplev5">Vehículo del Propietario</label>
+                                    <div >
+                                    <ng-autocomplete  [data]="vehiclePropietaryList" [searchKeyword]="keyword" 
+                                                    placeholder="Seleccionar Vehiculo" (selected)='getSearchInfoPropietary($event)'
+                                                    [itemTemplate]="itemTemplate" [notFoundTemplate]="notFoundTemplate">                                 
+                                    </ng-autocomplete>
+                                
+                                    <ng-template #itemTemplate let-item >
+                                        <a [innerHTML]="item.value"></a>
+                                    </ng-template>
+                                
+                                    <ng-template #notFoundTemplate let-notFound  >
+                                        <div [innerHTML]="notFound"></div>
+                                    </ng-template>
+                                  </div>
+                                </div>
+                            </div> 
+                            <div class="col-lg-2">
+                                <div class="form-outline form-white">
+                                  <strong class="form-label required" for="form3Examplea8">Identificación</strong>
+                                  <p class="mt-3">{{documento}}</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-2">
+                                <div class="form-outline form-white">
+                                  <strong class="form-label required" for="form3Examplea8">Teléfono</strong>
+                                    <p class="mt-3">{{telefono}}</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-2">
+                                <div class="form-outline form-white">
+                                  <strong class="form-label required" for="form3Examplea8">Correo</strong>
+                                    <p class="mt-3 text-lowercase">{{correo}}</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mt-3">
+                            <div class="col-lg-3">
+                                <div class="form-outline form-white">
+                                  <strong class="form-label required" for="form3Examplea8">Modelo - Versión</strong>
+                                    <p class="mt-3 text-lowercase">{{detallecarro}}</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-3">
+                                <div class="form-outline">
+                                    <label class="form-label" for="form3Examplev5">Servicio</label>
+                                    <div >
+                                    <ng-autocomplete  [data]="serviceList" [searchKeyword]="keyword" 
+                                                    placeholder="Seleccionar Servicio" (selected)='getReplacement($event)'
+                                                    [itemTemplate]="itemTemplate" [notFoundTemplate]="notFoundTemplate">                                 
+                                    </ng-autocomplete>
+                                
+                                    <ng-template #itemTemplate let-item >
+                                        <a [innerHTML]="item.value"></a>
+                                    </ng-template>
+                                
+                                    <ng-template #notFoundTemplate let-notFound  >
+                                        <div [innerHTML]="notFound"></div>
+                                    </ng-template>
+                                  </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3" *ngIf="replacement">
+                                <div class="form-outline">
+                                    <label class="form-label" for="form3Examplev5">Repuestos</label>
+                                    <div >
+                                    <ng-autocomplete  [data]="replacementList" [searchKeyword]="keyword" 
+                                                    placeholder="Seleccionar Repuesto" (selected)='dataReplacement($event)'
+                                                    [itemTemplate]="itemTemplate" [notFoundTemplate]="notFoundTemplate">                                 
+                                    </ng-autocomplete>
+                                
+                                    <ng-template #itemTemplate let-item >
+                                        <a [innerHTML]="item.value"></a>
+                                    </ng-template>
+                                
+                                    <ng-template #notFoundTemplate let-notFound  >
+                                        <div [innerHTML]="notFound"></div>
+                                    </ng-template>
+                                  </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<footer>    
+    <div class="container">       
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="footer-widget">
+            <h3 style="margin-right: 110px;">Horario</h3>
+            <div class="footer-widget-content">
+              <div class="open-time ">
+                  <ul class="opening-time">
+                    <li><span></span><h6>Horario disponible de Lunes a Viernes</h6>
+                    <li><span></span><h6><strong>A partir de :</strong> 8am - 4pm</h6>
+                  </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="footer-widget" style="margin-top: 50px;text-align: -webkit-center;">
+            <h6 >Copyright© CompuAmerica 2022.</h6>
+            <div class="footer-widget-content">
+                <br>
+                <h6>6 C. Negrín, Caracas 1050, Frente al CC. El Recreo. Distrito Capital</h6>
+                <div class="footer-social">
+            </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="footer-widget">
+            <h3>Redes Sociales</h3>
+            <div class="footer-widget-content" style=" text-align: -webkit-center;">
+              <div class="images-gellary">
+                <p></p>
+                <table style="margin-left: 25px;">
+                  <tr>
+                    <td>
+                      <ul>
+                        <li ><a href="https://www.facebook.com/Mundial Autos-Sas-107360681039695" target="_blank"><img  style="border-radius: 6px;background-color: #ffffff7d;" src="./assets/imagenes/facebook.png" alt="Instagram 01" width="40px" height="40px"></a></li>
+                        <br>
+                        <li><a href="https://www.instagram.com/Mundial Autoss.vzla/?hl=es-la" target="_blank"><img style="background-color: #ffffff7d;border-radius: 15px;" src="./assets/imagenes/instagram.png" alt="Instagram 02" width="40px" height="40px"></a></li>
+                      </ul>
+                    </td>
+                    <td>
+                      <ul>
+                        <li style="border-radius: 15px;"><a  href="https://twitter.com/Mundial Autos" target="_blank"><img style="background-color: #ffffff7d;" src="./assets/imagenes/twitter.png" alt="Instagram 01" width="40px" height="40px"></a></li>
+                        <br>
+                        <li style="border-radius: 15px;"><a href="https://co.linkedin.com/company/linkedin-com-company-Mundial Autossas" target="_blank"><img  style="background-color: #ffffff7d"src="./assets/imagenes/linkedin.png"  width="40px" height="40px"></a></li>
+                      </ul>
+                    </td>
+                  </tr>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
